# transformers

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
mirrorshift/: data.py  distributed.py  inference.py  models.py  train.py  utils.py
mirrorshift/config/model_configs/: cs_med.json  med.json  ss_small.json
mirrorshift/config/training_configs/: cs_med.json  small.json  ss_small.json
mirrorshift/experiments/: MHFFN_models.py
personaltransformers/: data.py  inference.py  models.py  train-expt.py  train.py  utils.py
personaltransformers/config/: small_model_config.json
personaltransformers/config/model_configs/: cs_cmp_mha.json  cs_cmp_mla.json  cs_med.json  ss_small.json
personaltransformers/config/training_configs/: cs_med.json  ss_small.json
personaltransformers/old_code/: README.txt  models.py
pytorch/personalpytorchtransformers/: attention.py  models.py
pytorch/src/: attention.py  attentions.py
pytorch/test/: basic_test.py  example_test.py
test/: basic_test.py
